--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -30,10 +30,10 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="zQA-Lm-Xlw">
                                             <rect key="frame" x="0.0" y="-6.5" width="375" height="50"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hPK-vt-EBq">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hPK-vt-EBq">
                                                     <rect key="frame" x="0.0" y="0.0" width="325" height="50"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GY3-2q-WkB">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GY3-2q-WkB">
                                                     <rect key="frame" x="333" y="0.0" width="42" height="50"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -41,9 +41,11 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="hPK-vt-EBq" firstAttribute="leading" secondItem="zQA-Lm-Xlw" secondAttribute="leading" id="LxQ-5V-Ex2"/>
-                                                <constraint firstItem="hPK-vt-EBq" firstAttribute="top" secondItem="zQA-Lm-Xlw" secondAttribute="top" id="nbA-3o-snI"/>
-                                                <constraint firstAttribute="bottom" secondItem="hPK-vt-EBq" secondAttribute="bottom" id="uT0-WO-GVH"/>
+                                                <constraint firstAttribute="trailing" secondItem="GY3-2q-WkB" secondAttribute="trailing" id="QFr-lC-ylK"/>
+                                                <constraint firstItem="GY3-2q-WkB" firstAttribute="top" secondItem="zQA-Lm-Xlw" secondAttribute="top" id="VhA-QV-mfI"/>
+                                                <constraint firstItem="GY3-2q-WkB" firstAttribute="leading" secondItem="hPK-vt-EBq" secondAttribute="trailing" constant="8" id="W3D-hv-Sxe"/>
+                                                <constraint firstAttribute="bottom" secondItem="GY3-2q-WkB" secondAttribute="bottom" id="cao-pf-yCA"/>
+                                                <constraint firstAttribute="width" secondItem="zQA-Lm-Xlw" secondAttribute="height" multiplier="15:2" id="yAI-7U-WfH"/>
                                             </constraints>
                                         </stackView>
                                     </subviews>
@@ -79,33 +81,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6jC-2r-rgy">
-                                <rect key="frame" x="57" y="92" width="240" height="176"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6jC-2r-rgy">
+                                <rect key="frame" x="20" y="84" width="335" height="184"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEO-Fm-TEL">
-                                <rect key="frame" x="78" y="373" width="135" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4sY-Vd-95s">
-                                <rect key="frame" x="78" y="411" width="135" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sjt-mU-Mf9">
-                                <rect key="frame" x="78" y="330" width="135" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="kdO-C4-wGs">
+                                <rect key="frame" x="78" y="330" width="42" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sjt-mU-Mf9">
+                                        <rect key="frame" x="0.0" y="0.0" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEO-Fm-TEL">
+                                        <rect key="frame" x="0.0" y="40" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4sY-Vd-95s">
+                                        <rect key="frame" x="0.0" y="79.5" width="42" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="4sY-Vd-95s" firstAttribute="leading" secondItem="kdO-C4-wGs" secondAttribute="leading" id="IIQ-2E-pEz"/>
+                                    <constraint firstAttribute="trailing" secondItem="4sY-Vd-95s" secondAttribute="trailing" id="hXq-Oh-07o"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6jC-2r-rgy" firstAttribute="top" secondItem="LYw-jN-9xS" secondAttribute="top" constant="20" id="Gx3-dX-Aeg"/>
+                            <constraint firstItem="LYw-jN-9xS" firstAttribute="bottom" secondItem="kdO-C4-wGs" secondAttribute="bottom" constant="237" id="IR2-DH-p22"/>
+                            <constraint firstItem="kdO-C4-wGs" firstAttribute="top" secondItem="uAr-NF-pcH" secondAttribute="top" constant="330" id="Jyj-FC-5Ih"/>
+                            <constraint firstItem="kdO-C4-wGs" firstAttribute="leading" secondItem="LYw-jN-9xS" secondAttribute="leading" constant="78" id="Vn1-jj-g9g"/>
+                            <constraint firstItem="6jC-2r-rgy" firstAttribute="leading" secondItem="LYw-jN-9xS" secondAttribute="leading" constant="20" id="aE2-oN-SFa"/>
+                            <constraint firstItem="LYw-jN-9xS" firstAttribute="trailing" secondItem="6jC-2r-rgy" secondAttribute="trailing" constant="20" id="fsF-7j-SFG"/>
+                            <constraint firstItem="kdO-C4-wGs" firstAttribute="top" secondItem="6jC-2r-rgy" secondAttribute="bottom" constant="62" id="z27-B4-7on"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="LYw-jN-9xS"/>
                     </view>
                     <connections>
